--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 				<p><b>YOUR CHOICE</b></p ><br/>
 			    <img id="mg" src="img/ph.jpg">
 				</td>
-				<td align="center" style="font-size:30px;color: yellow;"><b> </b></td><!--÷–º‰µƒŒƒ◊÷-->
+				<td align="center" style="font-size:30px;color: yellow;"><b> </b></td>
 				<td align="center" width="200">
 					<form id="form1" name="form1">
 						<b>PLEASE CHOOSE</b>
@@ -49,7 +49,7 @@
 			</tr>
 			<tr height="100px">
 				<td colspan="3" align="center">
-					<p><b>TOTAL£∫</b><span id="s1"></span>&nbsp;&nbsp;&nbsp;<b>WIN£∫</b><span id="s2"></span>&nbsp;&nbsp;&nbsp;<b>LOSE£∫</b><span id="s3"></span>&nbsp;&nbsp;&nbsp;<b>TIE£∫</b><span id="s4"></span></p >
+					<p><b>TOTALÔºö</b><span id="s1"></span>&nbsp;&nbsp;&nbsp;<b>WINÔºö</b><span id="s2"></span>&nbsp;&nbsp;&nbsp;<b>LOSEÔºö</b><span id="s3"></span>&nbsp;&nbsp;&nbsp;<b>TIEÔºö</b><span id="s4"></span></p >
 					<button type="button" onclick="he()"><b>SHOW RESULT</b></button>
 				</td>
 			</tr>
@@ -87,7 +87,7 @@
 				}else if(b=="2"){
 					c1.src="img/bu.jpg";
 				}else{
-					alert("«Î—°‘Ò£°‘Ÿ≥ˆ»≠");
+					alert("ËØ∑ÈÄâÊã©ÔºÅÂÜçÂá∫Êã≥");
 					return false;
 				}
 			
@@ -101,7 +101,7 @@
 				}else if(num2==2){
 					c2.src="img/bu.jpg";
 				}
-				//≈–∂œ≤¬»≠
+			
 				var ts=document.getElementById("j")
 				var ss=num3-num2;
 				if(ss==0){
