--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 	<head>
 		<meta charset=utf-8" />
-		<title></title>
-				<style>
+		<title>Rock, Paper, Scissors</title>
+		<style>
 			body{
 				background-size: 100% ;
 
