--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 				}else if(b=="2"){
 					c1.src="img/bu.jpg";
 				}else{
-					alert("请选择！再出拳");
+					alert("PLEASE CHOOSE FIRST!");
 					return false;
 				}
 			
