--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 			</tr>
 			<tr height="100px">
 				<td colspan="3" align="center">
-					<p><b>TOTAL：</b><span id="s1"></span>&nbsp;&nbsp;&nbsp;<b>WIN：</b><span id="s2"></span>&nbsp;&nbsp;&nbsp;<b>LOSE：</b><span id="s3"></span>&nbsp;&nbsp;&nbsp;<b>TIE：</b><span id="s4"></span></p >
+					<p><b>TOTAL: </b><span id="s1"></span>&nbsp;&nbsp;&nbsp;<b>WIN: </b><span id="s2"></span>&nbsp;&nbsp;&nbsp;<b>LOSE: </b><span id="s3"></span>&nbsp;&nbsp;&nbsp;<b>TIE: </b><span id="s4"></span></p >
 					<button type="button" onclick="he()"><b>SHOW RESULT</b></button>
 				</td>
 			</tr>
